--- a/ui/package.json
+++ b/ui/package.json
@@ -13,13 +13,22 @@
     "test:e2e": "playwright test",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "react": "^19.1",
+    "react-dom": "^19.1"
+  },
   "devDependencies": {
-    "vite": "^6.2",
-    "typescript": "^5.9",
-    "vitest": "^3.1",
-    "jsdom": "^26.1",
     "@playwright/test": "^1.52",
-    "@vitest/coverage-v8": "^3.1"
+    "@testing-library/jest-dom": "^6.6",
+    "@testing-library/react": "^16.3",
+    "@types/react": "^19.1",
+    "@types/react-dom": "^19.1",
+    "@vitejs/plugin-react": "^4.5",
+    "@vitest/coverage-v8": "^3.1",
+    "jsdom": "^26.1",
+    "typescript": "^5.9",
+    "vite": "^6.2",
+    "vitest": "^3.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": ["esbuild"]
