Add client library, OpenTelemetry tracing, and update memory docs
- Add config-client library with typed ConfigClient, error classes, and tests
- Integrate client library into Admin UI (api layer + type re-exports)
- Add OpenTelemetry auto-instrumentation with Jaeger for distributed tracing
- Add docker-compose.yml for Jaeger all-in-one
- Update memory docs (ARCHITECTURE, SETUP, TECHNICAL, TESTING, ABOUT) to reflect current state

Made-with: Cursor

--- a/config-service/.env.example
+++ b/config-service/.env.example
@@ -5,3 +5,6 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_NAME=config_api
+
+# OpenTelemetry (optional — defaults work for local development with Jaeger)
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
