--- a/config-service/package.json
+++ b/config-service/package.json
@@ -20,6 +20,12 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.70.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.212.0",
+    "@opentelemetry/resources": "^2.5.1",
+    "@opentelemetry/sdk-node": "^0.212.0",
+    "@opentelemetry/semantic-conventions": "^1.40.0",
     "dotenv": "^17.3.1",
     "express": "^4",
     "pg": "^8.18.0",
